--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-	<title>Administracion de base de datos</title>
+	<meta charset="utf-8">
+		<title>Administracion de base de datos</title>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
+
+
 <body>
-<h1></h1>
-<br>
-<p>Lorem</p>
+
+	<h1>inicio</h1>
+
+<ul>
+	<li><a href="lecturas.html">Lecturas</a></li>
+	<li><a href="multimedia.html">multimedia</a></li>
+	<li><a href="actividades.html">actividades</a></li>
+	<li><a href="Autores.html">Autores</a></li>
+	
+</ul>
+
 </body>
+
+<script src="js/jquery.js"></script>
+<script src="js/prefixfree.js"></script>
+<script src="js/modernizr.js"></script>
+
 </html>
