--- a/index.html
+++ b/index.html
@@ -10,15 +10,34 @@
 
 <body>
 
-	<h1>inicio</h1>
+	<h1> Administracion de base de datos </h1>
+	<p>
+		El manejo de la información es un factor clave de competencia y crecimiento
+		de las empresas, el acceso a los datos es de carácter crítico, teniendo
+		necesidad de integrar la información de múltiples fuentes de datos, a menudo
+		por parte de terceros para la toma de decisiones, captación de tendencias,
+		minimización de riesgos y análisis de opiniones.
+	</p>
 
-<ul>
+	<p>
+		De la misma manera los servicios en Internet (correo electrónico, portales,
+		internet móvil, cloud computing, etc.), han propiciado una evolución sin
+		precedentes en la tecnología de Base de datos fortaleciéndola como una
+		herramienta importante para las organizaciones.
+	</p>
+
+<ul id="menu">
 	<li><a href="lecturas.html">Lecturas</a></li>
 	<li><a href="multimedia.html">multimedia</a></li>
 	<li><a href="actividades.html">actividades</a></li>
-	<li><a href="Autores.html">Autores</a></li>
-	
+	<li><a href="Autores.html">Autores</a></li>	
 </ul>
+
+<img src="" alt="">
+
+
+
+
 
 </body>
 
