--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
 <body>
 
-	<h1> Administracion de base de datos </h1>
+<ul>
+	<li><a href="lecturas.html">Lecturas</a></li>
+	<li><a href="multimedia.html">multimedia</a></li>
+	<li><a href="actividades.html">actividades</a></li>
+	<li><a href="Autores.html">Autores</a></li>	
+</ul>
+
+	<h1>
+		Administracion de base de datos
+	</h1>
+
 	<p>
 		El manejo de la información es un factor clave de competencia y crecimiento
 		de las empresas, el acceso a los datos es de carácter crítico, teniendo
@@ -26,12 +36,46 @@
 		herramienta importante para las organizaciones.
 	</p>
 
-<ul id="menu">
-	<li><a href="lecturas.html">Lecturas</a></li>
-	<li><a href="multimedia.html">multimedia</a></li>
-	<li><a href="actividades.html">actividades</a></li>
-	<li><a href="Autores.html">Autores</a></li>	
-</ul>
+	<p>
+		Colombia busca dar el gran salto tecnológico mediante la masificación de
+		Internet y el desarrollo del ecosistema digital nacional (plan Vive Digital,
+		2010), fortaleciendo infraestructura, servicios, aplicaciones y usuarios lo que
+		conlleva al requerimiento de talento humano calificado en Tecnologías de la
+		Información y las Comunicaciones (TIC) Lo anterior genera una gran demanda
+		de profesionales con fortalezas en ésta área, sin embargo, la escasez del
+		talento humano es inminente y la oferta de formación en administración de
+		base de datos en el país es muy baja como se puede evidenciar en estudios del
+		sector (Estudio de Salarios y Profesionales del Sector de Software y TI de
+		Colombia Fedesoft 2012), que demuestran que encontrar el personal idóneo
+		para desempeñar el cargo de Administrador de Base de Datos tiene un 55% de
+		nivel de dificultad, adicionalmente el área se focaliza en el manejo de
+		productos exclusivos y no en las competencias específicas que debe tener el
+		administrador de base de datos.
+	</p>
+
+	<hr/>
+
+	<h2>
+		Objetivos
+	</h2>
+
+	<p>
+		Administrar la base de datos para garantizar la integridad, disponibilidad
+		y calidad de los datos.
+	</p>
+
+	<p>
+		Diagnosticar el nivel de seguridad de la información de acuerdo con las
+		normas internacionales y el objeto de negocio.
+	</p>
+
+	<p>
+		Identificar los sistemas operativos sobre los que puede ser instalado el SMBD
+	</p>
+
+	<p>
+		Configurar el SMBD de acuerdo a los requerimientos de hardware y software
+	</p>
 
 <img src="" alt="">
 
