--- a/lecturas.html
+++ b/lecturas.html
@@ -7,7 +7,13 @@
 <body>
 
 	<h1> lecturas</h1>
-
+ <ul>
+                    <li><a href="Administración de base de datos.html" class="menu">ADMINISTRACION BASE DE DATOS (DBA)</a></li>
+                    <li><a href="Funciones de una DBA.html" class="menu">FUNCIONES DE UNA DBA</a></li>
+                    <li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">NUEVAS TECNOLOGÍAS Y APLICACIONES DE LOS SISTEMAS DE BASES DE DATOS</a></li>
+                    <li><a href="Tecnicas de seguridad.html" class="menu">TECNICAS DE SEGURIDAD</a></li>
+                    <li><a href="" class="menu"></a></li>
+                </ul>
 <ul>
 	<li><a href="index.html">inicio</a></li>
 	<li><a href="multimedia.html">multimedia</a></li>
