--- a/lecturas.html
+++ b/lecturas.html
@@ -12,7 +12,7 @@
                     <li><a href="Funciones de una DBA.html" class="menu">FUNCIONES DE UNA DBA</a></li>
                     <li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">NUEVAS TECNOLOGÍAS Y APLICACIONES DE LOS SISTEMAS DE BASES DE DATOS</a></li>
                     <li><a href="Tecnicas de seguridad.html" class="menu">TECNICAS DE SEGURIDAD</a></li>
-                    <li><a href="" class="menu"></a></li>
+                    <li><a href="Sistemas manejadores de base de datos.html" class="menu">SISTEMAS MANEJADORES DE BASE DE DATOS</a></li>
                 </ul>
 <ul>
 	<li><a href="index.html">inicio</a></li>
