--- a/index.html
+++ b/index.html
@@ -2,18 +2,40 @@
 <html lang="es">
 
 <head>
+	<title>Administracion de base de datos</title>
 	<meta charset="utf-8">
-		<title>Administracion de base de datos</title>
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<meta name='author' content='Wilfran martinez, W_lfran@hotmail.com'>
+	<meta name='description' content='sitio web con enfasis a la administracion de bese de datos'>
+	<meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>		
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+	<link rel="stylesheet" href="css/style_index.css">
 </head>
 
-
 <body>
+	<script src="js/jquery.js"></script>
+	<script src="js/prefixfree.js"></script>
+	<script src="js/modernizr.js"></script>
 
-	<h1>
-		Administracion de base de datos
-	</h1>
+<div id="contenidos">
+	<header>
+        <h1>Administracion de Base de Datos</h1>
+        <h2>GRUPO 301122_61</h2>
+    </header>
+    <nav>
+    	<ul class="menu">
+            <li><a href="index.html" class="menu">INICIO</a></li>
+            <li><a class="menu">LECTURAS</a>
+    </nav>
+	
 
+</div>
+
+
+
+	
+		
+	
 	<p>
 		El manejo de la información es un factor clave de competencia y crecimiento
 		de las empresas, el acceso a los datos es de carácter crítico, teniendo
@@ -46,7 +68,7 @@
 		administrador de base de datos.
 	</p>
 
-	<hr/>
+	
 
 	<h2>
 		Objetivos
@@ -84,9 +106,4 @@
 
 
 </body>
-
-<script src="js/jquery.js"></script>
-<script src="js/prefixfree.js"></script>
-<script src="js/modernizr.js"></script>
-
 </html>
