--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
     </header>
     <nav>
     	<ul class="menu">
-            <li><a href="index.html" class="menu">INICIO</a></li>
-            <li><a class="menu">LECTURAS</a>
+            <li><a href="index.html" class="menu">Inicio</a></li>
+<li><a class="menu">Lecturas</a>
+ 	<ul>
+     	<li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
+       	<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
+      	<li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
+        <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
+        <li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
+	 </ul>
+</li>
     </nav>
 	
 
@@ -93,7 +101,7 @@
 	</p>
 
 <ul>
-	<li><a href="lecturas.html">Lecturas</a></li>
+	
 	<li><a href="multimedia.html">multimedia</a></li>
 	<li><a href="actividades.html">actividades</a></li>
 	<li><a href="Autores.html">Autores</a></li>	
