--- a/index.html
+++ b/index.html
@@ -22,28 +22,42 @@
         <h1>Administracion de Base de Datos</h1>
         <h2>GRUPO 301122_61</h2>
     </header>
-    <nav>
-    	<ul class="menu">
-            <li><a href="index.html" class="menu">Inicio</a></li>
-<li><a class="menu">Lecturas</a>
- 	<ul>
-     	<li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
-       	<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
-      	<li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
-        <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-        <li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
-	 </ul>
-</li>
-    </nav>
-	
+	<nav>
+		<ul class="menu">
+			<li><a href="index.html" class="menu">Inicio</a></li>
+			<li><a class="menu">Lecturas</a>
+ 				<ul>
+     				<li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
+       				<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
+      				<li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
+       				 <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
+        			<li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
+        		</ul>
+			</li>
+			<li><a class="menu">Multimedia</a>
+            	<ul>
+                    <li><a href="" class="menu"></a></li>
+                    <li><a href="" class="menu"></a></li>
+            	</ul>
+            </li>
+            <li><a class="menu">Actividades</a>
+            	<ul>
+                    <li><a href="" class="menu"></a></li>
+                    <li><a href="" class="menu"></a></li>
+                    <li><a href="" class="menu"></a></li>
+                </ul>
+            </li>
+            <li><a class="menu">AUTORES</a>
+                 <ul>
+                    <li><a href="" class="menu"></a></li>
+                    <li><a href="" class="menu"></a></li>
+                    <li><a href="" class="menu"></a></li>             
+                </ul>
+            </li>
 
-</div>
+		</ul>
+	</nav>
 
-
-
-	
-		
-	
 	<p>
 		El manejo de la información es un factor clave de competencia y crecimiento
 		de las empresas, el acceso a los datos es de carácter crítico, teniendo
@@ -100,18 +114,19 @@
 		Configurar el SMBD de acuerdo a los requerimientos de hardware y software
 	</p>
 
-<ul>
-	
-	<li><a href="multimedia.html">multimedia</a></li>
-	<li><a href="actividades.html">actividades</a></li>
-	<li><a href="Autores.html">Autores</a></li>	
-</ul>
-
 <img src="" alt="">
 
+<footer>
+    <h4>
+    Universidad Nacional Abierta y a Distancia | Diseño de Sitios Web Grupo_301122_61
+    <br>
+    Valledupar-Cesar-2018
+    </h4>
+    <h5>
+    VISITAS   <a href="https://www.contadorvisitasgratis.com" title="contador de visitas blogger"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=r5a68ztymg2j5bybxzg42e3y9s9x6259" border="0" title="contador de visitas blogger" alt="contador de visitas blogger"></a>
+	</h5>
 
-
-
-
+</footer>
+</div>
 </body>
 </html>
