--- a/multimedia.html
+++ b/multimedia.html
@@ -7,7 +7,10 @@
 <body>
 
 	<h1> multimedias</h1>
-
+ <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
+                    <li><a href="" class="menu"></a></li>
+                     <li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
+                    <li><a href="" class="menu"></a></li>
 <ul>
 	<li><a href="index.html">inicio</a></li>
 	<li><a href="Lecturas.html">Lecturas</a></li>
