--- a/index.html
+++ b/index.html
@@ -28,22 +28,19 @@
 			<li><a class="menu">Lecturas</a>
  				<ul>
      				<li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
-					 <br />
        				<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
-					 <br />
       				<li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
-					 <br />
        				 <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-					 <br />
         			<li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
         		</ul>
 			</li>
-			<li><a class="menu">Multimedia</a>
+			<li><a class="menu">MULTIMEDIA</a>
             	<ul>
-                   <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
+                    <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
                     
-			<li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
-                                	</ul>
+                     <li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
+                 
+            	</ul>
             </li>
             <li><a class="menu">Actividades</a>
             	<ul>
