--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+
+<html lang="es" class"no-js">
 
 <head>
-	<title>Administracion de base de datos</title>
 	<meta charset="utf-8">
+	<title>Administracion de base de datos</title>
 	<meta name='author' content='Wilfran martinez, W_lfran@hotmail.com'>
 	<meta name='description' content='sitio web con enfasis a la administracion de bese de datos'>
 	<meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>		
@@ -25,7 +26,7 @@
 	<nav>
 		<ul class="menu">
 			<li><a href="index.html" class="menu">Inicio</a></li>
-			<li><a class="menu">Lecturas</a>
+			<li><a class="menu">LECTURAS</a>
  				<ul>
      				<li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
        				<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
