--- a/Tecnicas de seguridad.html
+++ b/Tecnicas de seguridad.html
@@ -26,7 +26,7 @@
   <nav>
     <ul class="menu">
       <li><a href="index.html" class="menu">Inicio</a></li>
-      <li><a class="menu">LECTURAS</a>
+      <li><a class="menu">Lecturas</a>
         <ul>
             <li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
             
