--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
 		Configurar el SMBD de acuerdo a los requerimientos de hardware y software
 	</p>
 </articule>
+<a class="twitter-timeline" data-width="280" data-height="420" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </section>
-<img src="" alt="">
-
 <footer>
     <h4>
     Universidad Nacional Abierta y a Distancia | Diseño de Sitios Web Grupo_301122_61
