--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 	<header>
         <h1>Administracion de Base de Datos</h1>
         <h2>GRUPO 301122_61</h2>
-    </header>
-	</header>
+    </header>	
     <nav>
         <ul class="menu">
-            <li><a href="index.html" class="menu">INICIO</a></li>
+            <li><a href="index.html" class="menu">Inicio</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
                    <li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
@@ -119,8 +118,10 @@
 		Configurar el SMBD de acuerdo a los requerimientos de hardware y software
 	</p>
 </articule>
-<a class="twitter-timeline" data-width="280" data-height="420" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </section>
+<aside>
+	<a class="twitter-timeline" data-width="280" data-height="420" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</aside>
 <footer>
     <h4>
     Universidad Nacional Abierta y a Distancia | Diseño de Sitios Web Grupo_301122_61
