--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             </li>
             <li><a class="menu">MULTIMEDIA</a>
             <ul>
-                    <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
-                     <li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
+                    <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Conceptos Fundamentales de BD</a></li>
+					<br>
+                     <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de Administrador de BD</a></li>
+					 <br>
                 </ul>
             </li>
             <li><a class="menu">ACTIVIDADES</a>
