--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
             
         <li><a class="menu">AUTORES</a>
                  <ul>
-                    <li><a href="jheyson_sanchez.html" class="menu">Jheyson Sanchez</a></li>
-					<li><a href="chari_paredes.html" class="menu">Chari Paredes</a></li>        
+                    <li><a href="Autor 1 jheyson_sanchez.html" class="menu">Jheyson Sanchez</a></li>  
+					<li><a href="Autor 2 chari_paredes.html" class="menu">Chari Paredes</a></li>
+					<li><a href="Autor 3 wilfran_martinez.html" class="menu">Wilfran Martinez</a></li>       
                 </ul>
             </li>
 			
