--- a/Autor 2 chari_paredes.html
+++ b/Autor 2 chari_paredes.html
@@ -20,7 +20,7 @@
         <h1>Administracion de Base de Datos</h1>
         <h2>GRUPO 301122_61</h2>
     </header>
-   <nav>
+  <nav>
         <ul class="menu">
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
@@ -34,9 +34,9 @@
             </li>
             <li><a class="menu">MULTIMEDIA</a>
             <ul>
-                        <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Conceptos Fundamentales de BD</a></li>
+                        <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
                     <br>
-                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de Administrador de BD</a></li>
+                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
                     <br>
               </ul>
               
