--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </li>
             <li><a class="menu">MULTIMEDIA</a>
             <ul>
-                    	<li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Conceptos Fundamentales de BD</a></li>
+                    	<li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
 					<br>
-                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de Administrador de BD</a></li>
+                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
 					<br>
               </ul>
 			  
