--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<title>Administracion de base de datos</title>
 	<meta name='author' content='Wilfran martinez, W_lfran@hotmail.com'>
 	<meta name='description' content='sitio web con enfasis a la administracion de bese de datos'>
