--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Administracion de base de datos</title>
 	<meta name='author' content='Wilfran martinez, W_lfran@hotmail.com'>
 	<meta name='description' content='sitio web con enfasis a la administracion de bese de datos'>
@@ -24,11 +24,11 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                   <li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
-       				<li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
-      				<li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
-       				 <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-        			<li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
+                   <li><a href="Administración (DBA).html" class="menu">Administracion (DBA)</a></li>
+             <li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías y aplicaciones (DBA).html" class="menu">Tecnologias y Aplicaciones (DBA)</a></li>
+               <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
+              <li><a href="Sistemas manejadores (DBA).html" class="menu">Sistemas Manejadores (DBA)</a></li>
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
