--- a/Lectura1 Administración (DBA).html
+++ b/Lectura1 Administración (DBA).html
@@ -28,18 +28,17 @@
       <li><a href="index.html" class="menu">Inicio</a></li>
       <li><a class="menu">LECTURAS</a>
         <ul>
-            <li><a href="Lectura1 Administración (DBA).html" class="menu">Administracion (DBA)</a></li>
-              <li><a href="Funciones (DBA).html" class="menu">Funciones de una DBA</a></li>
-              <li><a href="Nuevas tecnologías y aplicaciones html" class="menu">Nuevas Tecnologias y Aplicaciones </a></li>
+            <li><a href="Administración (DBA).html" class="menu">Administracion (DBA)</a></li>
+             <li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías y aplicaciones (DBA).html" class="menu">Tecnologias y Aplicaciones (DBA)</a></li>
                <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-              <li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
+              <li><a href="Sistemas manejadores (DBA).html" class="menu">Sistemas Manejadores (DBA)</a></li>
             </ul>
       </li>
       <li><a class="menu">MULTIMEDIA</a>
               <ul>
-                    <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
-                    
-                     <li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
+                   <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
+                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
                  
               </ul>
             </li>
@@ -52,9 +51,9 @@
             </li>
             <li><a class="menu">AUTORES</a>
                  <ul>
-                    <li><a href="" class="menu"></a></li>
-                    <li><a href="" class="menu"></a></li>
-                    <li><a href="" class="menu"></a></li>             
+                   <li><a href="Autor 1 jheyson_sanchez.html" class="menu">Jheyson Sanchez</a></li>  
+          <li><a href="Autor 2 chari_paredes.html" class="menu">Chari Paredes</a></li>
+          <li><a href="Autor 3 wilfran_martinez.html" class="menu">Wilfran Martinez</a></li>             
                 </ul>
             </li>
 
