cambios en el nav

--- a/Lectura1 Administración (DBA).html
+++ b/Lectura1 Administración (DBA).html
@@ -36,11 +36,9 @@
             </ul>
       </li>
       <li><a class="menu">MULTIMEDIA</a>
-              <ul>
-                    <li><a href="Administración de Bases de Datos - Introducción Conceptos Fundamentales (I) - Andrés Muñoz.html" class="menu">ADMINISTRACION DE BASE DE DATOS-INTRODUCCION CONCEPTOS FUNDAMENTALES (I) ANDRES MUÑOZ</a></li>
-                    
-                     <li><a href="Funciones de Administrador de Bases de Datos" class="menu">FUNCIONES DE ADMINISTRACION DE BASE DE DATOS</a></li>
-                 
+               <ul>
+                      <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
+                    <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
               </ul>
             </li>
             <li><a class="menu">Actividades</a>
