--- a/Multimedia Pag 2 Funciones de Administrador de BD.html
+++ b/Multimedia Pag 2 Funciones de Administrador de BD.html
@@ -28,11 +28,11 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                   <li><a href="Administración de base de datos.html" class="menu">Administracion Base de Datos (DBA)</a></li>
-              <li><a href="Funciones de una DBA.html" class="menu">Funciones de una DBA</a></li>
-              <li><a href="Nuevas tecnologías y aplicaciones de los sistemas de bases de datos.html" class="menu">Nuevas Tecnologias y Aplicaciones de los Sistemas de Bases de Datos</a></li>
-               <li><a href="Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-              <li><a href="Sistemas manejadores de base de datos.html" class="menu">Sistemas Manejadores de Base de Datos</a></li>
+                 <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
+             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías (DBA).html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
+               <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
+              <li><a href="Lectura5 Manejadores (DBA).html" class="menu"> Sistemas manejadores BD</a></li>
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
