--- a/Lectura5 Manejadores BD.html
+++ b/Lectura5 Manejadores BD.html
@@ -28,7 +28,7 @@
       <li><a href="index.html" class="menu">Inicio</a></li>
       <li><a class="menu">LECTURAS</a>
         <ul>
-          li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
+         li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
              <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
               <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
@@ -37,7 +37,7 @@
       </li>
       <li><a class="menu">MULTIMEDIA</a>
               <ul>
-                  <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
+                    <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
                     <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
                  
               </ul>
@@ -59,72 +59,51 @@
 
     </ul>
   </nav>
-
 <article>
 
-             <h3>SISTEMAS MANEJADORES DE BASE DE DATOS</h3>
-<br />
- 
+<h2>Tecnicas de seguridad</h2>
+
 <p>
-	
-<h3>Definicion</h3>
+El mecanismo de seguridad de un SGBD3 debe incluir formas de restringir el acceso al sistema como un todo. Ésto, se denomina control de acceso y se pone en practicas creando cuentas de usuarios y contraseñas para que es SGBD controle 
+el proceso de entrada al sistema.
+ <br />
+  <br />
+Otra técnica de seguridad es el cifrado de datos, que sirve para proteger datos confidenciales que se transmiten por satélite o por algún otro tipo de red de comunicaciones. El cifrado provee protección adicional a secciones confidenciales de una base de datos. Los datos se codifican mediante algún algoritmo ex profeso. Un usuario no autorizado que tenga acceso a los datos codificados tendrá problemas para algoritmos (o claves) de codificación o descifrado para tal efecto 
+<br />
+<br />
+	<h3>El administrador de la base de datos</h3>
+	 
+Es la autoridad central que controla un sistema de este tipo. El DBA4 tiene una cuenta privilegiada en el SGBD, a veces
+denominada cuenta del sistema, que confiere capacidades extraordinarias no disponibles para cuentas y usuarios ordinarios de la base de datos. El DBA ejecuta los siguientes tipos de acciones:
+<br />
+<br />
+• Creación de cuentas.
+<br />
+<br />
+• Concesión de privilegios.
+<br />
+<br />
+• Revocación de privilegios.
+<br />
+<br />
+• Asignación de niveles de seguridad.
+<br />
+<br />
+• Es el responsable de la seguridad global del sistema
+de base de datos.
+<br />
+<br />
+Una costumbre (mala costumbre) que tienen muchos administradores o usuarios es usar el acceso con root5 (superusuario
+o administrador) para todas las bases de datos, instalan un sitio usando el CMS WordPress, y como datos de acceso a la base de datos (para que WP use el servidor MariaDB y use su DB) le ponen el usuario de administración del servidor MariaDB6: root
 <br />
 
-Es un software que tiene como objetivo facilitar la construcción y manipulación de bases de datos sirviendo como interfaz entre éstas, los usuarios y los distintos tipos de aplicaciones que las utilizan.
-<br />
-  <br />
-<h3>Caracteristicas</h3>
-<br />
+También, instalan cualquier otra aplicación web (un chat,paste, foro, etc) y hacen lo mismo, siempre usan el usuario
+root de MariaDB.
 
-• Establecen la organización de los datos de acuerdo con las
-especificaciones dadas por los programas utilizados.
 <br />
-  <br />
-• Tienen datos de naturaleza descriptiva para las bases de datos,
-llamados metadatos.
-<br />
-  <br />
-• Poseen soporte de múltiples vistas de datos y con capacidad para
-compartirlo.
-<br />
-  <br />
-• Utilizan procesos de transacciones de multiusuario.
-<br />
-  <br />
-• Permiten el desarrollo de aplicaciones en un tiempo reducido.
-<br />
-  <br />
-
-• Tienen disponibilidad de la información actualizada.
-<br />
-  <br />
-• Manejan bases de datos de cualquier tamaño, de acuerdo con el
-sistema manejador elegido.
-<br />
-  <br />
-• La base de datos que manipulan puede tener diferentes tipos de
-complejidad de acuerdo con el objetivo específico.
-<br />
-  <br />
-• Acceso controlado a los datos mediante mecanismos de seguridad
-<br />
-  <br />
-<h3>Evolucion historica y SMBD</h3>
-<br />
-
-Los sistemas de archivos fueron desde los años 40 los elementos que permitieron el almacenamiento de datos basados en lenguajes como Fortran y Cobol. El concepto como tal de Sistema Manejador de Base de Datos
-<br />
-  <br />
-(SMBD) o Sistema Gestor de Base de Datos (DBMS, DataBase Management System) nace desde 1964 utilizando realmente la Administración de Datos.
-<br />
-  <br />
-<h3>Lenguajes</h3>
-<br />
- 
-Entre los lenguajes que se utilizan en un DBMS se encuentra: Lenguaje de Manipulación de Datos (DML, Data Manipulation Language):
-
-Por medio de este lenguaje los usuarios pueden realizar consultas o manipular datos que se encuentran ya organizados en una forma estructurada. En la actualidad el DML más utilizado es el SQL (Structured Query Langua-
-ge), usado para manipular datos de base de datos relacional. Entre otros se encuentran: IMS/DL1, CODASYL. Los DML se pueden clasificar en dos grupos: Lenguajes de consulta procedimentales: El usuario da instrucciones para que se desarrollen procedimientos u operaciones sobre la base de datos.
+Para conservar la seguridad en todos estos niveles para debe afianzar la seguridad de la base de datos. La debilidad de los
+niveles bajos de seguridad (físico o humano) permite burlar las medidas de seguridad estrictas de niveles superiores (base de
+datos). La seguridad dentro del sistema operativo se aplica en varios niveles, que van desde las contraseñas para el acceso al sistema hasta el aislamiento de los procesos concurrentes que se ejecutan en él. El sistema de archivos también proporciona algún nivel de protección.
 
 </article>
 </p>
