--- a/Multimedia Pag 1 Conceptos Fundamentales de BD.html
+++ b/Multimedia Pag 1 Conceptos Fundamentales de BD.html
@@ -22,7 +22,7 @@
     </header>
     <nav>
         <ul class="menu">
-            li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
+            <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
              <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
               <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
