--- a/Autor 1 jheyson_sanchez.html
+++ b/Autor 1 jheyson_sanchez.html
@@ -25,7 +25,7 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
+                <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
              <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
               <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
