--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <li><a class="menu">LECTURAS</a>
                 <ul>
                <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
-             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
-              <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
+             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de las BD</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Nuevas Tecnologias</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-              <li><a href="Lectura5 Sistemas Manejadores BD.html" class="menu"> Sistemas manejadores BD</a></li>
+              <li><a href="Lectura5 Sistemas Manejadores BD.html" class="menu"> Sistemas Manejadores BD</a></li>
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
