--- a/Autor 1 jheyson_sanchez.html
+++ b/Autor 1 jheyson_sanchez.html
@@ -25,15 +25,15 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
-             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
-              <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
+               <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
+             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de las BD</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías DBA.html" class="menu">Nuevas Tecnologias</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-              <li><a href="Lectura5 Sistemas Manejadores BD.html" class="menu"> Sistemas manejadores BD</a></li>
+              <li><a href="Lectura5 Sistemas Manejadores BD.html" class="menu"> Sistemas Manejadores BD</a></li>
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
-             <ul>
+            <ul>
                         <li><a href="Multimedia Pag 1 Conceptos Fundamentales de BD.html" class="menu">Fundamentos BD</a></li>
                     <li><a href="Multimedia Pag 2 Funciones de Administrador de BD.html" class="menu">Funciones de BDA</a></li>
               </ul>
@@ -51,7 +51,7 @@
                  <ul>
                     <li><a href="Autor 1 jheyson_sanchez.html" class="menu">Jheyson Sanchez</a></li>  
                     <li><a href="Autor 2 chari_paredes.html" class="menu">Chari Paredes</a></li>
-                    <li><a href="Autor 3 wilfran_martinez.html" class="menu">Wilfran Martinez</a></li>
+                    <li><a href="Autor 3 wilfran_martinez.html" class="menu">Wilfran Martinez</a></li>       
                 </ul>
             </li>
             
