--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                <li><a href="Lectura1 Administración BD.html" class="menu">Administracion DB</a></li>
-             <li><a href="Lectura2 Funciones BD.html" class="menu">Funciones de los DBA</a></li>
-              <li><a href="Lectura3 Nuevas tecnologías (DBA).html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
+                <li><a href="Lectura1 Administración (DBA).html" class="menu">Administracion DB</a></li>
+             <li><a href="Lectura2 Funciones de una DBA.html" class="menu">Funciones de los DBA</a></li>
+              <li><a href="Lectura3 Nuevas tecnologías y aplicaciones (DBA).html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
-              <li><a href="Lectura5 Manejadores (DBA).html" class="menu"> Sistemas manejadores BD</a></li>
+              <li><a href="Lectura5 Sistemas manejadores (DBA).html" class="menu"> Sistemas manejadores BD</a></li>
                 </ul>
             </li>
             <li><a class="menu">MULTIMEDIA</a>
@@ -64,63 +64,64 @@
 		<br>
 		<h5>INTRODUCCIÓN ADMINISTRACION DE BASE DE DATOS</h5>
 			<p>
-		El manejo de la información es un factor clave de competencia y crecimiento
-		de las empresas, el acceso a los datos es de carácter crítico, teniendo
-		necesidad de integrar la información de múltiples fuentes de datos, a menudo
-		por parte de terceros para la toma de decisiones, captación de tendencias,
-		minimización de riesgos y análisis de opiniones.
-	</p>
-			<p>
-			De la misma manera los servicios en Internet (correo electrónico, portales,
-			internet móvil, cloud computing, etc.), han propiciado una evolución sin
-			precedentes en la tecnología de Base de datos fortaleciéndola como una
-			herramienta importante para las organizaciones.
+				El manejo de la información es un factor clave de competencia y crecimiento
+				de las empresas, el acceso a los datos es de carácter crítico, teniendo
+				necesidad de integrar la información de múltiples fuentes de datos, a menudo
+				por parte de terceros para la toma de decisiones, captación de tendencias,
+				minimización de riesgos y análisis de opiniones.
 			</p>
 
 			<p>
-			Colombia busca dar el gran salto tecnológico mediante la masificación de
-			Internet y el desarrollo del ecosistema digital nacional (plan Vive Digital,
-			2010), fortaleciendo infraestructura, servicios, aplicaciones y usuarios lo que
-			conlleva al requerimiento de talento humano calificado en Tecnologías de la
-			Información y las Comunicaciones (TIC) Lo anterior genera una gran demanda
-			de profesionales con fortalezas en ésta área, sin embargo, la escasez del
-			talento humano es inminente y la oferta de formación en administración de
-			base de datos en el país es muy baja como se puede evidenciar en estudios del
-			sector (Estudio de Salarios y Profesionales del Sector de Software y TI de
-			Colombia Fedesoft 2012), que demuestran que encontrar el personal idóneo
-			para desempeñar el cargo de Administrador de Base de Datos tiene un 55% de
-			nivel de dificultad, adicionalmente el área se focaliza en el manejo de
-			productos exclusivos y no en las competencias específicas que debe tener el
-			administrador de base de datos.
+				De la misma manera los servicios en Internet (correo electrónico, portales,
+				internet móvil, cloud computing, etc.), han propiciado una evolución sin
+				precedentes en la tecnología de Base de datos fortaleciéndola como una
+				herramienta importante para las organizaciones.
 			</p>
 
+			<p>
+				Colombia busca dar el gran salto tecnológico mediante la masificación de
+				Internet y el desarrollo del ecosistema digital nacional (plan Vive Digital,
+				2010), fortaleciendo infraestructura, servicios, aplicaciones y usuarios lo que
+				conlleva al requerimiento de talento humano calificado en Tecnologías de la
+				Información y las Comunicaciones (TIC) Lo anterior genera una gran demanda
+				de profesionales con fortalezas en ésta área, sin embargo, la escasez del
+				talento humano es inminente y la oferta de formación en administración de
+				base de datos en el país es muy baja como se puede evidenciar en estudios del
+				sector (Estudio de Salarios y Profesionales del Sector de Software y TI de
+				Colombia Fedesoft 2012), que demuestran que encontrar el personal idóneo
+				para desempeñar el cargo de Administrador de Base de Datos tiene un 55% de
+				nivel de dificultad, adicionalmente el área se focaliza en el manejo de
+				productos exclusivos y no en las competencias específicas que debe tener el
+				administrador de base de datos.
+			</p>
 
-	<h5>
-		OBJETIVOS
-	</h5>
+			<h5>
+			OBJETIVOS
+			</h5>
 
-	<p>
-		• Administrar la base de datos para garantizar la integridad, disponibilidad
-		y calidad de los datos.
-	</p>
+			<p>
+				• Administrar la base de datos para garantizar la integridad, disponibilidad
+				y calidad de los datos.
+			</p>
 
-	<p>
-		• Diagnosticar el nivel de seguridad de la información de acuerdo con las
-		normas internacionales y el objeto de negocio.
-	</p>
+			<p>
+				• Diagnosticar el nivel de seguridad de la información de acuerdo con las
+				normas internacionales y el objeto de negocio.
+			</p>
 
-	<p>
-		• Identificar los sistemas operativos sobre los que puede ser instalado el SMBD
-	</p>
+			<p>
+				• Identificar los sistemas operativos sobre los que puede ser instalado el SMBD
+			</p>
 
-	<p>
-		• Configurar el SMBD de acuerdo a los requerimientos de hardware y software
-	</p>
-	</article>
+			<p>
+				• Configurar el SMBD de acuerdo a los requerimientos de hardware y software
+			</p>
+		</article>
 
-<aside>
-	<br>
-<a class="twitter-timeline" data-width="400" data-height="700" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<aside>
+		<br>
+		<a class="twitter-timeline" data-width="400" data-height="700" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</aside>
 </section>
 
 
