--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="index.html" class="menu">INICIO</a></li>
             <li><a class="menu">LECTURAS</a>
                 <ul>
-                <li><a href="Lectura1 Administración (DBA).html" class="menu">Administracion DB</a></li>
+                <li><a href="Lectura 1.html" class="menu">Administracion DB</a></li>
              <li><a href="Lectura2 Funciones de una DBA.html" class="menu">Funciones de los DBA</a></li>
               <li><a href="Lectura3 Nuevas tecnologías y aplicaciones (DBA).html" class="menu">Tecnologias y Aplicaciones SBD</a></li>
                <li><a href="Lectura4 Tecnicas de seguridad.html" class="menu">Tecnicas de Seguridad</a></li>
@@ -56,11 +56,9 @@
 			
         </ul>
     </nav>
-
-
-<section>
+	<section>
         
-        <article>
+   	 <article>
 		<br>
 		<h5>INTRODUCCIÓN ADMINISTRACION DE BASE DE DATOS</h5>
 			<p>
@@ -118,13 +116,11 @@
 			</p>
 		</article>
 
-	<aside>
+		<aside>
 		<br>
 		<a class="twitter-timeline" data-width="400" data-height="700" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</aside>
-</section>
-
-
+		</aside>
+	</section>
 <footer>
     <h4>
     Universidad Nacional Abierta y a Distancia | Diseño de Sitios Web Grupo_301122_61
