correcion de nombre cricigrama
por crucigrama

--- a/Lectura 4 Tecnicas de seguridad.html
+++ b/Lectura 4 Tecnicas de seguridad.html
@@ -49,7 +49,7 @@
             <ul>
                     <li><a href="Actividad 1 sopa.html" class="menu">Sopa De Letras BD</a></li>
                     <li><a href="Actividad 2 relacionar.html" class="menu">Relaconar Conceptos BD</a></li>
-                    <li><a href="Actividad 3 cricigrama.html" class="menu">Cricigrama BD</a></li>
+                    <li><a href="Actividad 3 crucigrama.html" class="menu">crucigrama BD</a></li>
                 </ul>
             </li>
             
