--- a/Lectura 5 Sistemas manejadores de DB.html
+++ b/Lectura 5 Sistemas manejadores de DB.html
@@ -49,7 +49,7 @@
             <ul>
                     <li><a href="Actividad 1 sopa.html" class="menu">Sopa De Letras BD</a></li>
                     <li><a href="Actividad 2 relacionar.html" class="menu">Relaconar Conceptos BD</a></li>
-                    <li><a href="Actividad 3 cricigrama.html" class="menu">Cricigrama BD</a></li>
+                    <li><a href="Actividad 3 crucigrama.html" class="menu">crucigrama BD</a></li>
                 </ul>
             </li>
             
