--- a/Actividad 1 sopa.html
+++ b/Actividad 1 sopa.html
@@ -64,7 +64,7 @@
 
     
     <section>
-       <iframe src='https://es.educaplay.com/es/recursoseducativos/4067124/html5/sopa_de_letras_bda.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4067124/sopa_de_letras_bda.htm'>Sopa de Letras BDA</a>
+       <iframe src='https://es.educaplay.com/es/recursoseducativos/4067124/html5/sopa_de_letras_bda.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4067124/sopa_de_letras_bda.htm'></a>
 
     </section>
 
