--- a/Actividad 2 relacionar.html
+++ b/Actividad 2 relacionar.html
@@ -64,7 +64,7 @@
 
     
     <section>
-       <iframe src='https://es.educaplay.com/es/recursoseducativos/4067228/html5/administrador_de_base_de_datos.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4067228/administrador_de_base_de_datos.htm'>Administrador de base de datos</a>
+       <iframe src='https://es.educaplay.com/es/recursoseducativos/4067228/html5/administrador_de_base_de_datos.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4067228/administrador_de_base_de_datos.htm'></a>
 
     </section>
 
