--- a/Actividad 3 crucigrama.html
+++ b/Actividad 3 crucigrama.html
@@ -64,7 +64,7 @@
 
     
     <section>
-       <iframe src='https://es.educaplay.com/es/recursoseducativos/4074197/html5/administracion_de_base_de_dato.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4074197/administracion_de_base_de_dato.htm'>ADMINISTRACIÓN DE BASE DE DATO</a>
+       <iframe src='https://es.educaplay.com/es/recursoseducativos/4074197/html5/administracion_de_base_de_dato.htm' width='795' height='690' frameborder='0'></iframe><a href='https://es.educaplay.com/es/recursoseducativos/4074197/administracion_de_base_de_dato.htm'></a>
 
     </section>
 
