--- a/Lectura 2 Funciones de un DBA.html
+++ b/Lectura 2 Funciones de un DBA.html
@@ -8,7 +8,7 @@
 	<meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>		
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-	<link rel="stylesheet" href="css/style_index.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<script src="js/jquery.js"></script>
@@ -64,6 +64,12 @@
     <section>
     	<article>
     		 <h3>Funciones de un DBA</h3>
+
+         <center>
+              <img src="html5-imagenes/funciones de un DBA .jpg" alt="Funciones">
+              <br>
+              <span>Por: Reclu IT (22 de marzo de 2017)</span>
+            </center>
         
           <p>
             Los DBA realizan pruebas de rendimiento, pruebas de impacto, pruebas funcionales, pruebas de código, pruebas de carga de datos, pruebas de implementación y pruebas de integración en proyectos Investigación, desarrollo e innovación. Para la ejecución de pruebas es necesario aplicar las metodologías basadas en Ingeniería del software, sus aplicaciones funcionales y los requerimientos de calidad, añadiendo las líneas base de la ingeniería requerimientos en la inteligencia de negocios y las tecnologías de la información. Algunas de las actividades más relevantes de un DBA son:
