--- a/Lectura 3 Nuevas tecnologías de DB.html
+++ b/Lectura 3 Nuevas tecnologías de DB.html
@@ -8,7 +8,7 @@
 	<meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>		
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-	<link rel="stylesheet" href="css/style_index.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<script src="js/jquery.js"></script>
