Insertar imagenes Lecturas

--- a/Lectura 1 Administracion de DB.html
+++ b/Lectura 1 Administracion de DB.html
@@ -8,7 +8,7 @@
 	<meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>		
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style_index.css">
 </head>
 <body>
 	<script src="js/jquery.js"></script>
@@ -123,7 +123,7 @@
 
    	<aside>
 		<br>
-		<a class="twitter-timeline" data-width="400" data-height="700" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<a class="twitter-timeline" data-width="400" data-height="1300" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</aside>
 
 	</section>
