--- a/Lectura 5 Sistemas manejadores de DB.html
+++ b/Lectura 5 Sistemas manejadores de DB.html
@@ -10,7 +10,7 @@
   <meta name='keywords' content='UNAD, html, css, administracion , base de datos, web, diseño, sitio, OVI'>   
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style_index.css">
 </head>
 
 <body>
