Mejoras en imagenes de lecturas

--- a/Lectura 3 Nuevas tecnologías de DB.html
+++ b/Lectura 3 Nuevas tecnologías de DB.html
@@ -65,6 +65,12 @@
     	<article>
     				<h3>NUEVAS TECNOLOGÍAS Y APLICACIONES DE LOS SISTEMAS DE BASES DE DATOS</h3>
 
+                    <center>
+                    <img src="html5-imagenes/Nuevas tecnologias.jpg" alt="Nuevas tecnologias">
+                    <br>
+                    <span>Por: Marketing nuevas tecnologías (2017)</span>
+                    </center>
+
 					<p>
 					Los sistemas orientados a los datos se caracterizan porque los datos no son de una aplicación sino de una Organización entera que los va a utilizar; se integran las aplicaciones, se diferencian las estructuras lógicas y físicas. El concepto de relación cobra importancia. Originalmente las aplicaciones cubrían necesidades muy específicas de procesamiento, se centraban en una tarea específica. Las bases de datos evitan las inconsistencias que se producían por la utilización de los mismos datos lógicos desde distintos archivos a través de procesos independientes.
 					 <br />
@@ -94,7 +100,7 @@
     	</article>
     	<aside>
 		  <br>
-		  <a class="twitter-timeline" data-width="400" data-height="700" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		  <a class="twitter-timeline" data-width="400" data-height="1600" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		  </aside>
     </section>
 <footer>
