--- a/Lectura 4 Tecnicas de seguridad.html
+++ b/Lectura 4 Tecnicas de seguridad.html
@@ -65,10 +65,17 @@
         </ul>
     </nav>
 
-    
+<section>
 <article>
 
-<h2>Tecnicas de seguridad</h2>
+<h3>Tecnicas de seguridad</h3>
+
+                    <center>    
+                    <img src="html5-imagenes/tecnicas de seguridad.jpg" alt="Seguridad">
+                    <br>
+                    <span>Por: cidecame.uaeh.edu.mx (2018)</span>
+                    </center>
+                    
 
 <p>
 El mecanismo de seguridad de un SGBD3 debe incluir formas de restringir el acceso al sistema como un todo. Ésto, se denomina control de acceso y se pone en practicas creando cuentas de usuarios y contraseñas para que es SGBD controle 
@@ -111,9 +118,17 @@ root de MariaDB.
 Para conservar la seguridad en todos estos niveles para debe afianzar la seguridad de la base de datos. La debilidad de los
 niveles bajos de seguridad (físico o humano) permite burlar las medidas de seguridad estrictas de niveles superiores (base de
 datos). La seguridad dentro del sistema operativo se aplica en varios niveles, que van desde las contraseñas para el acceso al sistema hasta el aislamiento de los procesos concurrentes que se ejecutan en él. El sistema de archivos también proporciona algún nivel de protección.
+</p>
 
 </article>
-</p>
+
+<aside>
+      <br>
+      <a class="twitter-timeline" data-width="400" data-height="1100" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </aside>
+
+</section>
+
 <footer>
     <h4>
     UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB GRUPO_301122_3
