--- a/Lectura 5 Sistemas manejadores de DB.html
+++ b/Lectura 5 Sistemas manejadores de DB.html
@@ -65,10 +65,18 @@
         </ul>
     </nav>
 
+
+<section>
 <article>
 
              <h3>SISTEMAS MANEJADORES DE BASE DE DATOS</h3>
 <br />
+
+<center>
+                    <img src="html5-imagenes/manejadores de base de datos.jpg" alt="manejadores DB">
+                    <br>
+                    <span>junio 27, 2015 by homeworkdatabase</span>
+                    </center>
  
 <p>
 	
@@ -130,9 +138,18 @@ Entre los lenguajes que se utilizan en un DBMS se encuentra: Lenguaje de Manipul
 
 Por medio de este lenguaje los usuarios pueden realizar consultas o manipular datos que se encuentran ya organizados en una forma estructurada. En la actualidad el DML más utilizado es el SQL (Structured Query Langua-
 ge), usado para manipular datos de base de datos relacional. Entre otros se encuentran: IMS/DL1, CODASYL. Los DML se pueden clasificar en dos grupos: Lenguajes de consulta procedimentales: El usuario da instrucciones para que se desarrollen procedimientos u operaciones sobre la base de datos.
+</p>
 
 </article>
-</p>
+
+<aside>
+      <br>
+      <a class="twitter-timeline" data-width="400" data-height="1300" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </aside>
+
+</section>
+
+
 <footer>
     <h4>
     UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB GRUPO_301122_3
