Cambios en el Contador
Teniamos 2 Contadores diferentes

--- a/Autor 1 jheyson_sanchez.html
+++ b/Autor 1 jheyson_sanchez.html
@@ -89,15 +89,13 @@
 
 <footer>
     <h4>
-    UNIVERSIDAD NACIONAL ABIERTA Y A DISTANCIA | DISEÑO DE SITIOS WEB GRUPO 301122_61
-    <h4>
-        <h4>
-    VALLEDUPAR-CESAR-2018
-    <h4>
+    Universidad Nacional Abierta y a Distancia | Diseño de Sitios Web Grupo_301122_61
+    <br>
+    Valledupar-Cesar-2018
+    </h4>
     <h5>
-    VISITAS   <a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter10.allfreecounter.com/private/contadorvisitasgratis.php?c=nmnw7kuu6yfwyqcbdr4xws5ja7fm8g3c" border="0" title="contador de visitas para blogger" alt="contador de visitas para blogger"></a>    
+    VISITAS   <a href="https://www.contadorvisitasgratis.com" title="contador de visitas blogger"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=r5a68ztymg2j5bybxzg42e3y9s9x6259" border="0" title="contador de visitas blogger" alt="contador de visitas blogger"></a>
     </h5>
-
 </footer>
 </div>
 </body
